[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprites/player.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Marimba_Minigun.gd" type="Script" id=2]
[ext_resource path="res://Sprites/mini_marimba_sprite.png" type="Texture" id=3]
[ext_resource path="res://Sprites/asa_de_marimba_mini.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 14.6507 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 78, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 156, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 234, 0, 78, 66 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 78, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 234, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 312, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 390, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 468, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 546, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 624, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 702, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 780, 0, 78, 66 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 858, 0, 78, 66 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "idle",
"speed": 11.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "shooting",
"speed": 15.0
} ]

[node name="Marimba_Minigun" type="KinematicBody2D"]
position = Vector2( 1.75, -10.375 )
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="ShotTimer" type="Timer" parent="."]

[node name="MoveTimer" type="Timer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]

[node name="wings" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
frame = 3

[node name="body" type="AnimatedSprite" parent="."]
frames = SubResource( 19 )
animation = "shooting"

[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
